elastic/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic-operator
  namespace: elastic-system
  labels:
    app.kubernetes.io/name: elastic-operator
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: elastic-operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: elastic-operator
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9001"
    spec:
      containers:
        - name: manager
          args: ["manager", "--log-verbosity=0", "--metrics-port=9001"]
          resources:
            limits: null
          ports:
            - containerPort: 9001
              name: metrics
          volumeMounts:
            - $patch: replace
            - mountPath: /certs
              name: cert
              readOnly: true
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    spec:
      storageClassName: rook-cephfs
