elastic/base/kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts: 
      - "kibana-dev.govirto.com"
      secretName: kibana-tls
  rules:
  - host: kibana-dev.govirto.com
    http:
      paths:
      - backend:
          serviceName: kibana-kb-http
          servicePort: 5601
        path: /
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
spec:
  rules:
  - host: kibana-dev.govirto.com
    http:
      paths:
      - backend:
          serviceName: kibana-kb-http
          servicePort: 5601
        path: /
